@@ -31,6 +31,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #8473: doctest.testfile now uses universal newline mode to read
+  the test file.
+
 - Issue #20076: Added non derived UTF-8 aliases to locale aliases table.
 
 - Issue #20079: Added locales supported in glibc 2.18 to locale alias table.
